
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.92

   * new test case for PDB file IO (C0700odd).

   * WARNING: select API argument reordering may break existing code

   * adjusted behavior of "set" and "unset" to enable more concise
     changes of global settings: "set setting-name" "unset setting-name"
     WARNING: API changes to "set" and "unset" argument ordering may
     break existing code

   * pdb_retain_ids setting

   * Deuterium atom support

   * split_states command

   * much faster loading of multi-model PDB trajectories

   * get_symmetry & set_symmetry commands for molecule objects

   * mutagenesis wizard now preserves cartoon information

   * fixed alpha channel handling for transparency OpenGL objects

   * get_pdbstr API function

   * movie_loop setting

   * changed behavior of movie controls in the internal gui so that
     the movie commands will run consistently

Changes up to 0.91

   * fixed separate cartoon rendering bugs with helices and strands

   * added a fast C-based secondary structure assignment algorithm
     acessible through the "dss" command

   * cartoon_transparency setting

   * fixed "cake bug" in ray tracter for cylinders directly aligned
     with incident light ray

   * taught sculpting engine to treat unbound waters as donor/acceptors */

   * stick_ball, and stick_ball_ratio can be used to quikly generate ball
     and stick representation without messing around with spheres...
   
   * NEW: display of valences for sticks (controlled by valence setting).
     stick_fixed_radius determines whether they are inscribed or not

   * pdb HETATMS are no longer sorted by default
